<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/rdgroup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.02">
        <RadioButton
                android:text="@string/rdbtnBcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdbtnBcc" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rdbtnBsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rdbtnBsi" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rdbtnLc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdbtnLc" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gotoMainActivity"
            android:id="@+id/btnSelect" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.971" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rdgroup" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.065"/>
</android.support.constraint.ConstraintLayout>