<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RadioActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtName" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvCourse"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvName" android:layout_marginEnd="310dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="42dp"
            app:layout_constraintBottom_toTopOf="@+id/txtName" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/tvCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCourse" android:layout_marginTop="31dp"
            app:layout_constraintTop_toBottomOf="@+id/txtName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="310dp"
    />
    <TextView
            android:text="@string/tvDemand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDemand" android:layout_marginEnd="310dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtDemand" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDemand"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <CheckBox
            android:text="@string/chbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbox1" app:layout_constraintEnd_toStartOf="@+id/chbox2"
            android:layout_marginEnd="1dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDemand" app:layout_constraintHorizontal_bias="0.235"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.162"/>
    <CheckBox
            android:text="@string/chbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chbox2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/txtDemand"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.121"/>
</android.support.constraint.ConstraintLayout>